--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body style="text-align: center;"></body>
+  <body style="text-align: center; background-color:beige  ;"></body>
     <h1 style="text-align: center; margin-top: 20px">DSA Code Practice</h1>
     <h3 style="text-align: center; margin-top: 20px">Bubbule Sort</h3>
     <p>it checks two indexes at a time and swaps the value if the value is greater in the smaller  index</p>
