--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1 style="text-align: center; margin-top: 20px">DSA Code Practice</h1>
     <h3 style="text-align: center; margin-top: 20px">Bubbule Sort</h3>
     <p>it checks two indexes at a time and swaps the value if the value is greater in the smaller  index</p>
-    <script src="linkedlist.js"></script>
+    <script src="pallindrome.js"></script>
   </body>
 </html>
